overflow fix

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -50,13 +50,13 @@ body {
 }
 
 body {
-	height: 100vh;
-	width: 100vw;
 	background: url("../static/img/backgroundGradient.png");
 	background-size: cover;
 	background-repeat: no-repeat;
   	background-attachment: fixed;
 	background-position: top center;
+	width:100%;
+    overflow-x:hidden;
 }
   /* =============== */
  /*   Typography   */
@@ -390,7 +390,6 @@ header .websiteName:active{
 	transform: scale(0.9);
 	transition: 0.2s cubic-bezier(0.25, 1, 0.5, 1);
 }
-
 header a{
 	font-family: "Poppins", "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
 	font-size: 24px;
@@ -399,6 +398,23 @@ header a{
 	font-weight: 800;
 	line-height: 64px;
 	text-transform: uppercase;
+}
+.WIPbanner{
+	background:hsl(180deg 80% 50%);
+    float: right;
+    text-align: center;
+    color: #fff;
+	-webkit-text-fill-color: #fff;
+	font-size: 16px;
+    font-family: Poppins,Avenir,"Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+    font-weight: 600;
+    letter-spacing: .6px;
+	line-height: 36px;
+	padding: 0px 4px;
+	border-radius:16px;
+    width: 64px;
+    height: 36px;
+	margin: 14px 0px;
 }
 @media only screen and (max-width: 560px) {
 	header{
@@ -421,6 +437,10 @@ header a{
 	header nav{
 		display: none;
 	}
+	.WIPbanner{
+		margin: 6px 0px;
+	}
+
 }
 nav ul{
 	list-style: none;
@@ -476,7 +496,7 @@ main{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	overflow-x: hidden;
+	/* overflow-x: hidden; */
 }
 
 section{
@@ -531,7 +551,7 @@ section.workPiece{
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	z-index: -1;
+	z-index: 2;
 }
 #ARglasses .heroImage canvas{
 	position: relative;
@@ -1279,24 +1299,6 @@ article iframe{
   /* =============== */
  /*   Footer   */
 /* ============= */
-
-.WIPbanner{
-	background:hsl(180deg 80% 50%);
-    float: right;
-    text-align: center;
-    color: #fff;
-	-webkit-text-fill-color: #fff;
-	font-size: 16px;
-    font-family: Poppins,Avenir,"Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
-    font-weight: 600;
-    letter-spacing: .6px;
-	line-height: 36px;
-	padding: 0px 4px;
-	border-radius:16px;
-    width: 64px;
-    height: 36px;
-	margin: 14px 0px;
-}
 footer{
 	position: fixed;
 	bottom: 16px;
